--- a/Cleaned_Review.ipynb
+++ b/Cleaned_Review.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,174 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from tensorflow import keras "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# business_dataset = pd.read_json(\"./yelp_dataset/yelp_academic_dataset_business.json\")\n",
+    "from numpy import datetime64\n",
+    "from pandas import Int32Dtype, StringDtype\n",
+    "b_pandas =[]\n",
+    "not_needed=[\"review_id\",\"user_id\",\"useful\",\"funny\",\"cool\"]\n",
+    "r_dtypes = {\n",
+    "    \"review_id\": StringDtype,\n",
+    "     \"user_id\" : StringDtype,\n",
+    "     \"business_id\": StringDtype,\n",
+    "     \"stars\":Int32Dtype,\n",
+    "     \"date\": datetime64,\n",
+    "     \"text\":StringDtype,\n",
+    "     \"useful\":Int32Dtype,\n",
+    "     \"funny\" :Int32Dtype,\n",
+    "     \"cool\":Int32Dtype     \n",
+    "}\n",
+    "with open(\"./yelp_dataset/yelp_academic_dataset_review.json\",\"r\",encoding=\"utf-8\") as f:\n",
+    "    reader = pd.read_json(f,orient=\"records\",lines=True,dtype=r_dtypes,chunksize=1000)\n",
+    "    \n",
+    "    for chunck in reader: \n",
+    "        reduced_chunk = chunck.drop(columns=not_needed)\n",
+    "        b_pandas.append(reduced_chunk)\n",
+    "\n",
+    "b_pandas = pd.concat(b_pandas,ignore_index=True)\n",
+    "        \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = b_pandas.groupby(\"business_id\")[\"business_id\"].count().reset_index(name='counts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>---kPU91CF4Lq2-WlRu9Lw</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>--8IbOsAAxjKRoYsBFL-PA</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>--9osgUCSDUWUkoTLdvYhQ</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>--ARBQr1WMsTWiwOKOj-FQ</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>--FcbSxK1AoEtEAxOgBaCw</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              business_id  counts\n",
+       "0  ---kPU91CF4Lq2-WlRu9Lw      24\n",
+       "5  --8IbOsAAxjKRoYsBFL-PA      27\n",
+       "6  --9osgUCSDUWUkoTLdvYhQ      30\n",
+       "7  --ARBQr1WMsTWiwOKOj-FQ      23\n",
+       "9  --FcbSxK1AoEtEAxOgBaCw      42"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df[df[\"counts\"] >= 20 ]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 63489 entries, 0 to 150340\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   business_id  63489 non-null  object\n",
+      " 1   counts       63489 non-null  int64 \n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 1.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"Cleaned_review.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -23,7 +191,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.5"
   },
   "orig_nbformat": 4,
