Model created, trained and reported

--- a/Cleaned_Review.ipynb
+++ b/Cleaned_Review.ipynb
@@ -2,22 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections.abc import Sequence\n",
-    "from sklearn import preprocessing\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from tensorflow import keras "
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,124 +52,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = b_pandas.groupby(\"business_id\")[\"business_id\"].count().reset_index(name='counts')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>business_id</th>\n",
-       "      <th>counts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>---kPU91CF4Lq2-WlRu9Lw</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>--8IbOsAAxjKRoYsBFL-PA</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>--9osgUCSDUWUkoTLdvYhQ</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>--ARBQr1WMsTWiwOKOj-FQ</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>--FcbSxK1AoEtEAxOgBaCw</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              business_id  counts\n",
-       "0  ---kPU91CF4Lq2-WlRu9Lw      24\n",
-       "5  --8IbOsAAxjKRoYsBFL-PA      27\n",
-       "6  --9osgUCSDUWUkoTLdvYhQ      30\n",
-       "7  --ARBQr1WMsTWiwOKOj-FQ      23\n",
-       "9  --FcbSxK1AoEtEAxOgBaCw      42"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = df[df[\"counts\"] >= 20 ]\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 63489 entries, 0 to 150340\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   business_id  63489 non-null  object\n",
-      " 1   counts       63489 non-null  int64 \n",
-      "dtypes: int64(1), object(1)\n",
-      "memory usage: 1.5+ MB\n"
+      "C:\\Users\\Rojan\\AppData\\Local\\Temp\\ipykernel_113432\\3589472025.py:9: FutureWarning: Passing 'suffixes' as a <class 'NoneType'>, is not supported and may give unexpected results. Provide 'suffixes' as a tuple instead. In the future a 'TypeError' will be raised.\n",
+      "  b_pandas = df.merge(b_pandas,how=\"inner\",on=\"business_id\",suffixes=None)\n"
      ]
     }
    ],
    "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"Cleaned_review.csv\",index=False)"
+    "# 1. Group by businesss id to see the count of reviews for each business \n",
+    "# 2. Filter them (count >=20) as per our requirement\n",
+    "# 3.Inner join it with full review data so that we get full reviews \n",
+    "# 4.ALL the reviews by each business and create a new dataframe, where each line\n",
+    "#   is a business with all its reviews aggregated together.\n",
+    "\n",
+    "df = b_pandas.groupby(\"business_id\")[\"business_id\"].count().reset_index(name='counts')\n",
+    "df = df[df[\"counts\"] >= 20 ]\n",
+    "b_pandas = df.merge(b_pandas,how=\"inner\",on=\"business_id\",suffixes=None)\n",
+    "\n",
+    "df_review_agg = b_pandas.groupby(\"business_id\")[\"text\"].sum()\n",
+    "df_ready = pd.DataFrame({'business_id': df_review_agg.index, 'all_reviews':\n",
+    "df_review_agg.values})\n"
    ]
   },
   {
@@ -181,7 +85,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_ready.to_csv(\"./files/Cleaned_review.csv\",index=False)"
+   ]
   }
  ],
  "metadata": {
