--- a/Cleaned_business.ipynb
+++ b/Cleaned_business.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "col_not =[\"address\",\"city\",\"latitude\",\"longitude\",\"stars\",\"review_count\",\"is_open\",\"attributes\",\"categories\",\"hours\"]\n",
+    "col_not =[\"address\",\"city\",\"latitude\",\"longitude\",\"review_count\",\"is_open\",\"attributes\",\"categories\",\"hours\",\"postal_code\"]\n",
     "b_pandas=[]\n",
     "with open(\"./yelp_dataset/yelp_academic_dataset_business.json\",\"r\",encoding=\"utf-8\") as f:\n",
     "    reader = pd.read_json(f,lines=True,chunksize=1000)\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "      <th>business_id</th>\n",
        "      <th>name</th>\n",
        "      <th>state</th>\n",
-       "      <th>postal_code</th>\n",
+       "      <th>stars</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -66,90 +66,90 @@
        "      <td>Pns2l4eNsfO8kk83dixA6A</td>\n",
        "      <td>Abby Rappoport, LAC, CMQ</td>\n",
        "      <td>CA</td>\n",
-       "      <td>93101</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>mpf3x-BjTdTEA3yCZrAYPw</td>\n",
        "      <td>The UPS Store</td>\n",
        "      <td>MO</td>\n",
-       "      <td>63123</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>tUFrWirKiKi_TAnsVWINQQ</td>\n",
        "      <td>Target</td>\n",
        "      <td>AZ</td>\n",
-       "      <td>85711</td>\n",
+       "      <td>3.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>MTSW4McQd7CbVtyjqoe9mw</td>\n",
        "      <td>St Honore Pastries</td>\n",
        "      <td>PA</td>\n",
-       "      <td>19107</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>mWMc6_wTdE0EUBKIGXDVfA</td>\n",
        "      <td>Perkiomen Valley Brewery</td>\n",
        "      <td>PA</td>\n",
-       "      <td>18054</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>CF33F8-E6oudUQ46HnavjQ</td>\n",
        "      <td>Sonic Drive-In</td>\n",
        "      <td>TN</td>\n",
-       "      <td>37015</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>n_0UpQx1hsNbnPUSlodU8w</td>\n",
        "      <td>Famous Footwear</td>\n",
        "      <td>MO</td>\n",
-       "      <td>63144</td>\n",
+       "      <td>2.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>qkRM_2X51Yqxk3btlwAQIg</td>\n",
        "      <td>Temple Beth-El</td>\n",
        "      <td>FL</td>\n",
-       "      <td>33707</td>\n",
+       "      <td>3.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>k0hlBqXX-Bt0vf1op7Jr1w</td>\n",
        "      <td>Tsevi's Pub And Grill</td>\n",
        "      <td>MO</td>\n",
-       "      <td>63123</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>bBDDEgkFA1Otx9Lfe7BZUQ</td>\n",
        "      <td>Sonic Drive-In</td>\n",
        "      <td>TN</td>\n",
-       "      <td>37207</td>\n",
+       "      <td>1.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              business_id                      name state postal_code\n",
-       "0  Pns2l4eNsfO8kk83dixA6A  Abby Rappoport, LAC, CMQ    CA       93101\n",
-       "1  mpf3x-BjTdTEA3yCZrAYPw             The UPS Store    MO       63123\n",
-       "2  tUFrWirKiKi_TAnsVWINQQ                    Target    AZ       85711\n",
-       "3  MTSW4McQd7CbVtyjqoe9mw        St Honore Pastries    PA       19107\n",
-       "4  mWMc6_wTdE0EUBKIGXDVfA  Perkiomen Valley Brewery    PA       18054\n",
-       "5  CF33F8-E6oudUQ46HnavjQ            Sonic Drive-In    TN       37015\n",
-       "6  n_0UpQx1hsNbnPUSlodU8w           Famous Footwear    MO       63144\n",
-       "7  qkRM_2X51Yqxk3btlwAQIg            Temple Beth-El    FL       33707\n",
-       "8  k0hlBqXX-Bt0vf1op7Jr1w     Tsevi's Pub And Grill    MO       63123\n",
-       "9  bBDDEgkFA1Otx9Lfe7BZUQ            Sonic Drive-In    TN       37207"
+       "              business_id                      name state  stars\n",
+       "0  Pns2l4eNsfO8kk83dixA6A  Abby Rappoport, LAC, CMQ    CA    5.0\n",
+       "1  mpf3x-BjTdTEA3yCZrAYPw             The UPS Store    MO    3.0\n",
+       "2  tUFrWirKiKi_TAnsVWINQQ                    Target    AZ    3.5\n",
+       "3  MTSW4McQd7CbVtyjqoe9mw        St Honore Pastries    PA    4.0\n",
+       "4  mWMc6_wTdE0EUBKIGXDVfA  Perkiomen Valley Brewery    PA    4.5\n",
+       "5  CF33F8-E6oudUQ46HnavjQ            Sonic Drive-In    TN    2.0\n",
+       "6  n_0UpQx1hsNbnPUSlodU8w           Famous Footwear    MO    2.5\n",
+       "7  qkRM_2X51Yqxk3btlwAQIg            Temple Beth-El    FL    3.5\n",
+       "8  k0hlBqXX-Bt0vf1op7Jr1w     Tsevi's Pub And Grill    MO    3.0\n",
+       "9  bBDDEgkFA1Otx9Lfe7BZUQ            Sonic Drive-In    TN    1.5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,13 +170,13 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 150346 entries, 0 to 150345\n",
       "Data columns (total 4 columns):\n",
-      " #   Column       Non-Null Count   Dtype \n",
-      "---  ------       --------------   ----- \n",
-      " 0   business_id  150346 non-null  object\n",
-      " 1   name         150346 non-null  object\n",
-      " 2   state        150346 non-null  object\n",
-      " 3   postal_code  150346 non-null  object\n",
-      "dtypes: object(4)\n",
+      " #   Column       Non-Null Count   Dtype  \n",
+      "---  ------       --------------   -----  \n",
+      " 0   business_id  150346 non-null  object \n",
+      " 1   name         150346 non-null  object \n",
+      " 2   state        150346 non-null  object \n",
+      " 3   stars        150346 non-null  float64\n",
+      "dtypes: float64(1), object(3)\n",
       "memory usage: 4.6+ MB\n"
      ]
     }
@@ -187,19 +187,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "b_pandas.to_csv(\"./files/Cleaned_business.csv\",index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
